messing around learning references, this is quite snazzy

--- a/hons/sdfPresentation.tex
+++ b/hons/sdfPresentation.tex
@@ -12,8 +12,46 @@
 \end{frame}
 
 
-\begin{frame}{Introduction}
-This is a short introduction to Beamer class.
+\begin{frame}{Contents}
+\begin{itemize}
+	\item Background
+	\item Representation
+	\item Topologies - Properties
+	\item Scheduling
+	\item My Research
+\end{itemize}
 \end{frame}
 
+\begin{frame}{Background}
+\begin{itemize}
+	\item somedata
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Representation}
+\begin{itemize}
+	\item somedata\cite{lee87}
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Topologies - Properties}
+\begin{itemize}
+	\item somedata
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Scheduling}
+\begin{itemize}
+	\item somedata
+\end{itemize}
+\end{frame}
+
+\begin{frame}{My Research}
+\begin{itemize}
+	\item somedata
+\end{itemize}
+\end{frame}
+
+\bibliographystyle{wmaainf}	% (uses file "plain.bst")
+\bibliography{biblio}		% expects file "myrefs.bib"
 \end{document}
