Now we can start the SDF Presentation

--- a/hons/biblio.bib
+++ b/hons/biblio.bib
@@ -11,3 +11,44 @@
   publisher={IEEE}
 }
 
+%Mahlke paper, multi-platform decomposition, streamit
+@article{mal08,
+  title={{Orchestrating the execution of stream programs on multicore platforms}},
+  author={Kudlur, M. and Mahlke, S.},
+  journal={ACM SIGPLAN Notices},
+  volume={43},
+  number={6},
+  pages={114--124},
+  issn={0362-1340},
+  year={2008},
+  publisher={ACM}
+}
+
+%The SDF Book
+@book{sdfBook,
+	title={{Software Synthesis from Dataflow Graphs}},
+	author={Shuvra S. Battacharyya and Praveen K. Murthy and Edward A. Lee},
+	address={101 Philip Drive \\ Assinippi Park \\ Norwell, Massachusetts 02061 USA},
+	edition={First},
+	publisher={Kluwer Academic Publishers},
+	year={1996}
+}
+
+%Scheduling on multiprocessors, shorter than sdf book
+@article{sih91,
+  title={{Multiprocessor scheduling to account for interprocessor communication}},
+  author={Sih, G.C.},
+  journal={University of California at Berkeley, Berkeley, CA},
+  year={1991}
+}
+
+%Thies, streamit, empitical characterization
+@conference{thi10,
+  title={{An empirical characterization of stream programs and its implications for language and compiler design}},
+  author={Thies, W. and Amarasinghe, S.},
+  booktitle={Proceedings of the 19th international conference on Parallel architectures and compilation techniques},
+  pages={365--376},
+  year={2010},
+  organization={ACM}
+}
+
