maybe now we can actually do presentation work

--- a/hons/docs/sdf.tex
+++ b/hons/docs/sdf.tex
@@ -11,17 +11,13 @@
 \titlepage
 \end{frame}
 
-
-\begin{frame}
-
-\end{frame}
-
 %BACKGROUND INFO
 \section{Background}
 
 \begin{frame}{Background}
 \begin{itemize}
-	\item somedata
+	\item Not all programs are suited to traditional Von-Neuman model
+	\item Digital Signal Processing
 \end{itemize}
 \end{frame}
 
