added some papers and their references

--- a/hons/docs/biblio.bib
+++ b/hons/docs/biblio.bib
@@ -24,6 +24,17 @@
   publisher={ACM}
 }
 
+%this paper's filename bears no resemblance to its authors or content
+@article{pami01,
+  title={{Fast approximate energy minimization via graph cuts}},
+  author={Boykov, Y. and Veksler, O. and Zabih, R.},
+  journal={IEEE Transactions on pattern analysis and machine intelligence},
+  pages={1222--1239},
+  issn={0162-8828},
+  year={2001},
+  publisher={Published by the IEEE Computer Society}
+}
+
 %The SDF Book
 @book{sdfBook,
 	title={{Software Synthesis from Dataflow Graphs}},
@@ -42,8 +53,31 @@
   year={1991}
 }
 
+%the infamous tardos paper...
+@article{tardos,
+  title={{Approximation algorithms for scheduling unrelated parallel machines}},
+  author={Lenstra, J.K. and Shmoys, D.B. and Tardos, {\'E}.},
+  journal={Mathematical Programming},
+  volume={46},
+  number={1},
+  pages={259--271},
+  issn={0025-5610},
+  year={1990},
+  publisher={Springer}
+}
+
+%A streamit paper, high level description of language
+@conference{thies02,
+  title={{StreamIt: A language for streaming applications}},
+  author={Thies, W. and Karczmarek, M. and Amarasinghe, S.},
+  booktitle={Compiler Construction},
+  pages={49--84},
+  year={2002},
+  organization={Springer}
+}
+
 %Thies, streamit, empitical characterization
-@conference{thi10,
+@conference{thies10,
   title={{An empirical characterization of stream programs and its implications for language and compiler design}},
   author={Thies, W. and Amarasinghe, S.},
   booktitle={Proceedings of the 19th international conference on Parallel architectures and compilation techniques},
