graph cut energy minimization paper

--- a/hons/docs/biblio.bib
+++ b/hons/docs/biblio.bib
@@ -1,3 +1,15 @@
+%According to bernhard this paper has something related to communication matrix
+@article{boykov2001fast,
+  title={{Fast approximate energy minimization via graph cuts}},
+  author={Boykov, Y. and Veksler, O. and Zabih, R.},
+  journal={IEEE Transactions on pattern analysis and machine intelligence},
+  pages={1222--1239},
+  issn={0162-8828},
+  year={2001},
+  publisher={Published by the IEEE Computer Society}
+}
+
+
 %Lee and Messerschmidt PASS, PAPS, Repetition
 @article{lee87,
   title={{Static scheduling of synchronous data flow programs for digital signal processing}},
