Added reference to parxx paper

--- a/hons/docs/biblio.bib
+++ b/hons/docs/biblio.bib
@@ -47,6 +47,16 @@
   publisher={Published by the IEEE Computer Society}
 }
 
+%the java paper, we shall see what greatness it holds
+@article{par03,
+  title={{Distributed process networks in Java}},
+  author={Parks, T.M. and Roberts, D.},
+  issn={1530-2075},
+  year={2003},
+  publisher={IEEE Computer Society}
+}
+
+
 %The SDF Book
 @book{sdfBook,
 	title={{Software Synthesis from Dataflow Graphs}},
