added khan random google paper

--- a/hons/docs/biblio.bib
+++ b/hons/docs/biblio.bib
@@ -1,5 +1,5 @@
 %According to bernhard this paper has something related to communication matrix
-@article{boykov2001fast,
+@article{boy01,
   title={{Fast approximate energy minimization via graph cuts}},
   author={Boykov, Y. and Veksler, O. and Zabih, R.},
   journal={IEEE Transactions on pattern analysis and machine intelligence},
@@ -9,6 +9,13 @@
   publisher={Published by the IEEE Computer Society}
 }
 
+%random google scholar article
+@article{kha94,
+  title={{A comparison of multiprocessor scheduling heuristics}},
+  author={Khan, AA and McCreary, C.L. and Jones, MS},
+  year={1994},
+  publisher={IEEE Computer Society}
+}
 
 %Lee and Messerschmidt PASS, PAPS, Repetition
 @article{lee87,
