added boy97 to biblio

--- a/hons/docs/biblio.bib
+++ b/hons/docs/biblio.bib
@@ -1,3 +1,13 @@
+%one of the researchers bernhard mentioned
+@article{bodik1997refining,
+  title={{Refining data flow information using infeasible paths}},
+  author={Bodik, R. and Gupta, R. and Soffa, M.},
+  journal={Software Engineering—ESEC/FSE'97},
+  pages={361--377},
+  year={1997},
+  publisher={Springer}
+}
+
 %According to bernhard this paper has something related to communication matrix
 @article{boy01,
   title={{Fast approximate energy minimization via graph cuts}},
