dea08, li10, son10, tsa09

--- a/hons/docs/biblio.bib
+++ b/hons/docs/biblio.bib
@@ -9,6 +9,19 @@
   publisher={Published by the IEEE Computer Society}
 }
 
+%Dean google mapreduce map reduce
+@article{dean2008mapreduce,
+  title={{MapReduce: Simplified data processing on large clusters}},
+  author={Dean, J. and Ghemawat, S.},
+  journal={Communications of the ACM},
+  volume={51},
+  number={1},
+  pages={107--113},
+  issn={0001-0782},
+  year={2008},
+  publisher={ACM}
+}
+
 %random google scholar article
 @article{kha94,
   title={{A comparison of multiprocessor scheduling heuristics}},
@@ -28,6 +41,22 @@
   issn={0018-9340},
   year={1987},
   publisher={IEEE}
+}
+
+@inproceedings{Li10,
+ author = {Li, Min and Vazhkudai, Sudharshan S. and Butt, Ali R. and Meng, Fei and Ma, Xiaosong and Kim, Youngjae and Engelmann, Christian and Shipman, Galen},
+ title = {Functional Partitioning to Optimize End-to-End Performance on Many-core Architectures},
+ booktitle = {Proceedings of the 2010 ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis},
+ series = {SC '10},
+ year = {2010},
+ isbn = {978-1-4244-7559-9},
+ pages = {1--12},
+ numpages = {12},
+ url = {http://dx.doi.org/10.1109/SC.2010.28},
+ doi = {http://dx.doi.org/10.1109/SC.2010.28},
+ acmid = {1884686},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
 }
 
 %Mahlke paper, multi-platform decomposition, streamit
@@ -82,6 +111,23 @@
   year={1991}
 }
 
+%QR Tile multicore, dynamic scheduler
+@inproceedings{Son10,
+ author = {Song, Fengguang and Ltaief, Hatem and Hadri, Bilel and Dongarra, Jack},
+ title = {Scalable Tile Communication-Avoiding QR Factorization on Multicore Cluster Systems},
+ booktitle = {Proceedings of the 2010 ACM/IEEE International Conference for High Performance Computing, Networking, Storage and Analysis},
+ series = {SC '10},
+ year = {2010},
+ isbn = {978-1-4244-7559-9},
+ pages = {1--11},
+ numpages = {11},
+ url = {http://dx.doi.org/10.1109/SC.2010.48},
+ doi = {http://dx.doi.org/10.1109/SC.2010.48},
+ acmid = {1884650},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+}
+
 %the infamous tardos paper...
 @article{tardos,
   title={{Approximation algorithms for scheduling unrelated parallel machines}},
@@ -114,4 +160,15 @@
   year={2010},
   organization={ACM}
 }
+
+%paper looks seriously useful
+@article{tsa09,
+  title={{Dataflow processing and optimization on grid and cloud infrastructures}},
+  author={Tsangaris, M. and Kakaletris, G. and Kllapi, H. and Papanikos, G. and Pentaris, F. and Polydoras, P. and Sitaridi, E. and Stoumpos, V. and Ioannidis, Y.},
+  journal={Data Engineering},
+  pages={67},
+  year={2009},
+  publisher={Citeseer}
+}
+
 
