Renamed some files, added cplex and byzantine clocks papers

--- a/hons/docs/biblio.bib
+++ b/hons/docs/biblio.bib
@@ -20,7 +20,7 @@
 }
 
 %Dean google mapreduce map reduce
-@article{dean2008mapreduce,
+@article{dea08,
   title={{MapReduce: Simplified data processing on large clusters}},
   author={Dean, J. and Ghemawat, S.},
   journal={Communications of the ACM},
@@ -32,12 +32,48 @@
   publisher={ACM}
 }
 
+%Hen cplex ibm
+@article{hen99,
+  title={{Combinatorial optimization in OPL studio}},
+  author={Van Hentenryck, P. and Michel, L. and Laborie, P. and Nuijten, W. and Rogerie, J.},
+  journal={Progress in Artificial Intelligence},
+  pages={851--851},
+  year={1999},
+  publisher={Springer}
+}
+
 %random google scholar article
 @article{kha94,
   title={{A comparison of multiprocessor scheduling heuristics}},
   author={Khan, AA and McCreary, C.L. and Jones, MS},
   year={1994},
   publisher={IEEE Computer Society}
+}
+
+%Time, Clocks, the Universe and Everything
+@article{lam78,
+  title={{Time, clocks, and the ordering of events in a distributed system}},
+  author={Lamport, L.},
+  journal={Communications of the ACM},
+  volume={21},
+  number={7},
+  pages={558--565},
+  issn={0001-0782},
+  year={1978},
+  publisher={ACM}
+}
+
+%Byzantine clocks, the byzantines really get the short end of the stick
+@article{lam86,
+  title={{Byzantine clock synchronization}},
+  author={Lamport, L. and Smith, P.M.},
+  journal={ACM SIGOPS Operating Systems Review},
+  volume={20},
+  number={3},
+  pages={10--16},
+  issn={0163-5980},
+  year={1986},
+  publisher={ACM}
 }
 
 %Lee and Messerschmidt PASS, PAPS, Repetition
